# TheWheel

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  THIRD_PARTY_NOTICES.md  THIRD_PARTY_NOTICES.txt  vcpkg.json
assets/ktx2/: holy_cow.ktx2
include/: enums.h  pch.h  read_file.h
include/core/: core_pch.h  engine.h  event_handler.h  window.h
include/core/geometry/: buffers.h  geometry_pch.h  mesh.h
include/core/system/: event_handler.h  window.h
licenses/: zlib.txt
src/: TheWheel.cpp  engine.cpp
src/cmake/: add_module_library.cmake  compile_shaders.cmake
src/core/: core_pch.cpp  engine.cpp  event_handler.cpp  window.cpp
src/core/geometry/: buffer_helpers.cpp  command_buffer_helpers.cpp  geometry_pch.cpp  image_buffer.cpp  index_buffer.cpp  mesh.cpp  vertex_buffer.cpp  vi_buffer.cpp
src/core/system/: event_handler.cpp  window.cpp
src/shaders/: triangle.slang
